--- a/Parts/MechJeb2_AR202/part.cfg
+++ b/Parts/MechJeb2_AR202/part.cfg
@@ -17,9 +17,9 @@ PART {
     cost = 750
     category = Control
     subcategory = 0
-    title = MechJeb 2 (AR202 case)
-    manufacturer = Anatid Robotics
-    description = A ruggedized version of MechJeb's neural circuits in a radial-mount case.
+    title = #MechJeb_MechJeb2_Title // #MechJeb_MechJeb2_Title = MechJeb 2 (AR202 case)
+    manufacturer = #MechJeb_AnatidRobotics // #MechJeb_AnatidRobotics = Anatid Robotics
+    description = #MechJeb_MechJeb2_Description // #MechJeb_MechJeb2_Description = A ruggedized version of MechJeb's neural circuits in a radial-mount case.
 
     // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
     attachRules = 0,1,0,0,0
@@ -108,9 +108,9 @@ PART {
     cost = 750
     category = none
     subcategory = 0
-    title = MechJeb Features- Maneuver & Translatron
-    manufacturer = Anatid Robotics
-    description = Unlocks the following MechJeb windows: Maneuver Planner, Translatron, Warp Helper, Attitude Adjustment, Thrust Window, RCS Balancer. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
+    title = #MechJeb_Future_ManeuverTranslatron_Title // #MechJeb_Future_ManeuverTranslatron_Title = MechJeb Features- Maneuver & Translatron
+    manufacturer = #MechJeb_AnatidRobotics // #MechJeb_AnatidRobotics = Anatid Robotics
+    description = #MechJeb_Future_ManeuverTranslatron_Description // #MechJeb_Future_ManeuverTranslatron_Description = Unlocks the following MechJeb windows: Maneuver Planner, Translatron, Warp Helper, Attitude Adjustment, Thrust Window, RCS Balancer. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
     // --- standard part parameters ---
     mass = 0.00001
@@ -143,9 +143,9 @@ PART {
     cost = 750
     category = none
     subcategory = 0
-    title = MechJeb Features- Rover Autopilot
-    manufacturer = Anatid Robotics
-    description = Unlocks the following MechJeb windows: Rover Autopilot. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
+    title = #MechJeb_Future_RoverAutopilot_Title // #MechJeb_Future_RoverAutopilot_Title = MechJeb Features- Rover Autopilot
+    manufacturer = #MechJeb_AnatidRobotics // #MechJeb_AnatidRobotics = Anatid Robotics
+    description = #MechJeb_Future_RoverAutopilot_Description // #MechJeb_Future_RoverAutopilot_Description = Unlocks the following MechJeb windows: Rover Autopilot. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
     // --- standard part parameters ---
     mass = 0.00001
@@ -178,9 +178,9 @@ PART {
     cost = 750
     category = none
     subcategory = 0
-    title = MechJeb Features- Ascent, Landing, Spaceplane
-    manufacturer = Anatid Robotics
-    description = Unlocks the following MechJeb windows: Ascent Autopilot, Landing Autopilot, Spaceplane Guidance. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
+    title = #MechJeb_Future_AscentLandingSpaceplane_Title = MechJeb Features- Ascent, Landing, Spaceplane
+    manufacturer = #MechJeb_AnatidRobotics // #MechJeb_AnatidRobotics = Anatid Robotics
+    description = #MechJeb_Future_AscentLandingSpaceplane_Description // #MechJeb_Future_AscentLandingSpaceplane_Description = Unlocks the following MechJeb windows: Ascent Autopilot, Landing Autopilot, Spaceplane Guidance. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
     // --- standard part parameters ---
     mass = 0.00001
@@ -213,9 +213,9 @@ PART {
     cost = 750
     category = none
     subcategory = 0
-    title = MechJeb Features- Rendezvous & Docking
-    manufacturer = Anatid Robotics
-    description = Unlocks the following MechJeb windows: Rendezvous Guidance, Rendezvous Autopilot, Docking Autopilot. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
+    title = #MechJeb_Future_RendevousDocking_Title // #MechJeb_Future_RendevousDocking_Title = MechJeb Features- Rendezvous & Docking
+    manufacturer = #MechJeb_AnatidRobotics // #MechJeb_AnatidRobotics = Anatid Robotics
+    description = #MechJeb_Future_RendevousDocking_Description // #MechJeb_Future_RendevousDocking_Description = Unlocks the following MechJeb windows: Rendezvous Guidance, Rendezvous Autopilot, Docking Autopilot. Once unlocked, all existing MechJeb modules will be automatically upgraded to latest firmware.
 
     // --- standard part parameters ---
     mass = 0.00001
